<resources>
    <string name="app_name">OLYMPIA1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Training</string>
    <string name="my_health">My health</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="personal_data">Personal data</string>
    <string name="changing_language">RU</string>
    <string name="editing_data">Editing data</string>
    <string name="save">Save</string>
    <string name="exit_from_account">Exit from account</string>
    <string name="app_Info">Addition Information about App</string>
    <string name="subscription">Subscription</string>
    <string name="blood_analysis">Blood analysis</string>
    <string name="weight_analysis">Weight analysis</string>
    <string name="recommended_meal_plan">Recommended meal plan</string>
    <string name="vitamins">Vitamins</string>
    <string name="settings">Settings</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="description">Enter description of the post</string>
    <string name="comment">Enter the comment</string>
    <string name="go_back">Go back</string>
    <string name="for_empty_fields"> </string>
    <string-array name="forMyHealth">
        <item>Здесь должна быть информация про анализ крови</item>
        <item>Здесь должна быть информация про анализ веса</item>
        <item>Здесь должна быть информация про рекомендуемый план питания</item>
        <item>Здесь должна быть информация про витамины</item>
    </string-array>
    <string name="community_article3">How fast can you lose muscle mass without training</string>
    <string name="community_article2">How much muscle mass should men and women have</string>
    <string name="community_article1">Protein-rich Foods for Muscle Building</string>
    <string name="for_subscribers">This part is available only to those who have subscribed</string>
    <string name="log_in">Log in</string>
    <string name="deleting_data">Delete an account</string>
    <string name="invalid_user_name">Invalid user name data</string>
    <string name="invalid_password">Invalid password data</string>
    <string name="invalid_gender">Invalid gender data</string>
    <string name="incorrect_date_of_birth_data">Incorrect date of birth data</string>
    <string name="invalid_email">Invalid email data</string>
    <string name="existing_user_name">This user name already exists</string>
    <string name="log_inMFA" translatable="false">Log in</string>
    <string name="sign_upMFA" translatable="false">Sign Up</string>
    <string name="errMFA" translatable="false">the account does not exist</string>
    <string name="InfMFA" translatable="false"> </string>
    <string name="AccountInfMFA" translatable="false">Account info</string>
    <string name="removeTBMFA" translatable="false">Remove the toolbar</string>
    <string name="recoveryTBMFA" translatable="false">Restoring the toolbar</string>
    <string name="removeBNVMFA" translatable="false">Remove the bottom toolbar</string>
    <string name="recoveryBNVMFA" translatable="false">Restoring the bottom toolbar</string>
    <string name="ChatMFA" translatable="false">Chat</string>
    <string name="CB_MFA" translatable="false">Cristal ball</string>
    <string name="StatusMFA" translatable="false">Status: 49</string>
    <string name="DarkMFA" translatable="false">Dark mode</string>
    <string name="LightMFA" translatable="false">Light mode</string>
    <string name="SettingsMFA" translatable="false">Settings</string>
    <string name="Change_languageMFA" translatable="false">Change the language</string>
    <string name="TransitionMFA" translatable="false">Transition</string>
    <string name="toGamesMFA" translatable="false">To the main entertainment</string>
    <string name="RegistrationMFA" translatable="false">Registration</string>
    <string name="AuthorizationMFA" translatable="false">Authorization</string>
    <string name="AvatarMFA" translatable="false">Avatar</string>
    <string name="ChooseMFA" translatable="false">Choose one of the built-in avatars</string>
    <string name="User_nameMFA" translatable="false">User name</string>
    <string name="PasswordMFA" translatable="false">Password</string>
    <string name="SurnameMFA" translatable="false">Surname</string>
    <string name="NameMFA" translatable="false">Name</string>
    <string name="PatronymicMFA" translatable="false">Patronymic</string>
    <string name="SaveMFA" translatable="false">Save</string>
    <string name="ExitMFA" translatable="false">Exit</string>
    <string name="Go_backMFA" translatable="false">Go back</string>
    <string name="ForCB_MFA" translatable="false">Press here to start</string>
    <string name="SendToAnotherFragmentMFA" translatable="false">Send a message to another fragment</string>
    <string name="SendToMainFragmentMFA" translatable="false">Send a message to main fragment</string>
    <string name="divinationMFA" translatable="false">Divination</string>
    <string name="Enter_messageMFA" translatable="false">Enter something</string>
    <string name="ChangeAnimationMFA" translatable="false">Change Animation</string>
    <string name="ReverseAnimationMFA" translatable="false">Reverse Animation</string>
    <string name="firstValueMFA" translatable="false">first value</string>
    <string name="secondValueMFA" translatable="false">second value</string>
    <string name="getResultMFA" translatable="false">Get Result</string>
</resources>