<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/SettingsMFA">
        <menu>
            <item android:id="@+id/ChangeLanguage"
                android:title="@string/Change_languageMFA"
                android:icon="@drawable/language_24" />
            <item android:id="@+id/returnTB"
                android:title="@string/recoveryTBMFA"
                android:icon="@drawable/visible"/>
            <item android:id="@+id/returnBNV"
                android:title="@string/recoveryBNVMFA"
                android:icon="@drawable/visible"/>
        </menu>
    </item>
    <item android:title="@string/TransitionMFA">
        <menu>
            <item android:id="@+id/toGames"
                android:title="@string/toGamesMFA" />
            <item android:id="@+id/GoBackOnMFANV"
                android:title="@string/Go_backMFA" />
        </menu>
    </item>
</menu>