<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".mfa.entrance.LogIn">

    <TextView
        android:id="@+id/FTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/AuthorizationMFA"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/UNText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:hint="@string/User_nameMFA"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/UserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:hint="@string/PasswordMFA"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/SaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/SaveMFA"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/GoBackOnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/Go_backMFA"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp" />

</LinearLayout>