<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".main.view.fragments.Profile">

    <TextView
        android:id="@+id/TitleHeaderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/TitleUNOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/UserNameOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TitlePasswordOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/PasswordOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TitleGenderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/GenderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TitleBirthdayOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/BirthdayOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TitleEmailOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/EmailOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BGoBackOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-light"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>