<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MFA_DL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mfa.FragmentMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MFAMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/TBMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/for_toolbar" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/BNVMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TBMode">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IVAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/AvatarMFA"
                    android:src="@drawable/cat_and_bread"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/inf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/InfMFA"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="24sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/StatusMFA"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="20sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/LIAE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/design_default_color_primary_dark"
                    android:onClick="LIaEaSU"
                    android:text="@string/log_inMFA"
                    android:textColor="@color/yellow"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/purple"
                    android:onClick="LIaEaSU"
                    android:text="@string/sign_upMFA"
                    android:textColor="@color/yellow"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/BNVMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:visibility="gone"
            app:itemIconTint="@drawable/bnv_selector"
            app:itemTextColor="@color/white"
            app:labelVisibilityMode="selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/for_bottom_navigation_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NVMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white"
        app:headerLayout="@layout/mfa_header"
        app:itemIconTint="@color/purple"
        app:itemTextColor="@color/purple"
        app:menu="@menu/for_navigation_view"
        app:subheaderColor="@color/black" />
</androidx.drawerlayout.widget.DrawerLayout>